<resources>
    <string name="app_name">BakingApp</string>

    <string name="con_error">Check network connectivity</string>
    <string name="btn_reconnect">Reconnect</string>

    <string name="btn_ingredients">Ingredients \-\-\u003E</string>
    <string name="btn_steps">\u003C\-\- Steps </string>

    <string name="text_select_step">Select a step: </string>
    <string name="text_ingredients">List of ingredients: </string>

    <string name="text_servings">Servings</string>

    <!-- Phone navigation buttons for InstructionsFragment -->
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>

    <string name="appwidget_text">Select a recipe inside the app (drag widget corners to resize)</string>

    <!-- Content descriptions -->
    <string name="content_image">Recipe</string>
    <string name="content_exo_prev">Restart video</string>
    <string name="content_exo_play">Play</string>
    <string name="content_exo_pause">Pause</string>

    <!-- Menu -->
    <string name="menu_recipe">Back to recipes</string>

</resources>
