<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_horizontal_margin"
        android:padding="8dp"
        android:text="@string/btn_steps"
        android:textColor="@color/textColorCard2"
        android:background="@color/colorCard2"/>

    <TextView
        android:id="@+id/tv_ingredients_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_horizontal_margin"
        android:text="@string/text_ingredients"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <ScrollView
        android:id="@+id/sv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/MyCardView"
            android:layout_margin="@dimen/text_vertical_margin"
            card_view:cardBackgroundColor="@color/colorCard">

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_horizontal_margin"/>

        </android.support.v7.widget.CardView>
    </ScrollView>



</LinearLayout>