<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_horizontal_margin"
        android:padding="8dp"
        android:text="@string/btn_ingredients"
        android:background="@color/colorCard"/>

    <TextView
        android:id="@+id/tv_step_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_horizontal_margin"
        android:text="@string/text_select_step"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/MyCardView"
        android:layout_margin="@dimen/text_vertical_margin"
        card_view:cardBackgroundColor="@color/colorCard2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>
</LinearLayout>