<?xml version="1.0" encoding="utf-8"?>
<!-- Phone layout -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/content_image"
        android:src="@drawable/novideo"
        android:scaleType="centerInside"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            card_view:cardBackgroundColor="@color/colorCard"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="16dp">
        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"/>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <include layout="@layout/buttons_instructions"/>

</LinearLayout>